# langtest

./: .gitignore  ARCHITECTURE.md  EDITOR.md  GUIDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cursor/rules/: architecture-reference.mdc
apps/es/: index.html  pasado01-02.json
generator/: .env  .env.example  README.md  pyproject.toml
generator/.pytest_cache/v/cache/: nodeids
generator/fixtures/outputs/: SGxklyvj21M.json  j_HmDgl71hU.json  k7BpwrBwG7o.json  ufF4wIFTRdQ.json  uqZXpBLTZo4.json
generator/fixtures/transcripts/: SGxklyvj21M.txt  j_HmDgl71hU.txt  k7BpwrBwG7o.txt  ufF4wIFTRdQ.txt  uqZXpBLTZo4.txt
generator/src/langtest_gen/: __init__.py  __main__.py  cli.py  config.py  logging_utils.py  pipeline.py  schemas.py
generator/src/langtest_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
generator/src/langtest_gen/chains/: __init__.py  analyze_transcript.py  detect_language.py  evaluate.py  generate_section.py  json_fallback.py  plan_tests.py
generator/src/langtest_gen/prompts/: __init__.py  common.py  lang_de.py  lang_en.py  lang_es.py  lang_fr.py  registry.py
generator/src/langtest_gen/validators/: __init__.py  structural.py
generator/tests/: test_pipeline.py  test_schemas.py  test_validators.py
src/: App.vue  App.vue.js  index.js  index.ts  main.js  main.ts  styles.css
src/components/: AnswerCommentPopover.vue  AnswerCommentPopover.vue.js  ChooseCorrectAnswerTest.vue  ChooseCorrectAnswerTest.vue.js  FillInTheBlankTest.vue  FillInTheBlankTest.vue.js  (+12 more)
(+35 files in other folders)
